samples/_failures_safe/1761148769_e4f19a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9385d75a.c: In function ‘main’:
./samples/SAFE/__tmp_9385d75a.c:177:9: error: expected expression at end of input
  177 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9385d75a.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9385d75a.c:177:9: error: expected declaration or statement at end of input
